add information regarding the SUSE Open Source Policy

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           <p>
             <a href="https://www.suse.com/company/careers/#openSource">Open Source is in our Genes</a> at <a href="https://www.suse.com">SUSE</a>. We contribute upstream, we maintain projects under the <a href="https://github.com/SUSE">SUSE</a> and <a href="https://github.com/openSUSE">openSUSE</a> organizations on GitHub, and much more...
           </p>
+          <p>
+            At SUSE we believe it is good to be explicit about the culture and that it's important to not only be open about code but also about how it's done. For us Open Source is not only about code. That’s why we have written down the <a href=https://opensource.suse.com/suse-open-source-policy.html>SUSE Open Source Policy</a>. It explains our values and beliefs related to contributing Open Source content and participating in Open Source communities, and lays down the fundamental guidelines our employees follow when working with Open Source.
+          </p>
         </div>
       </div>
     </div>
